# space_bevy_game

./: Cargo.toml  README.md
data/: keybinds.ron  pause_menu.ron
examples/: test_player_controller.rs
src/: actions.rs  common.rs  lib.rs  main.rs  menu.rs  player.rs  spawn.rs  states.rs  world_gen.rs
src/actions/: mod.rs  mouse.rs  movement.rs
src/player/: bundle.rs  mod.rs  player_controller.rs  player_defintion.rs
src/player/components/: mod.rs
src/player/player_controller/: mod.rs
src/player/resources/: mod.rs  player_actions.rs
src/player/systems/: despawn_player.rs  look.rs  mod.rs  movement.rs  spawn_player.rs
src/ui/: mod.rs  pause_menu.rs  resources.rs
src/ui/menu/: mod.rs  pause_menu.rs
src/ui/pause_menu/: mod.rs  pause_menu.rs  resources.rs  spawn.rs  systems.rs
src/ui/pause_menu/resources/: menu_actions.rs  mod.rs
src/ui/pause_menu/systems/: mod.rs  spawn_menu.rs
src/world/: mod.rs  planet.rs
src/world_gen/: mod.rs
tests/: integration_test.rs  menu_test.rs
