[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8", features = ["dynamic"]}
    bevy_rapier3d = { version = "*", features = [ "simd-stable", "parallel" ] }
    bevy_mod_wanderlust = "0.2.2"
    bevy-inspector-egui = "0.13.0"
    leafwing-input-manager = "0.5.2"